# paas-test-app-frontend

./: .gcloudignore  .tool-versions  Procfile  README.md  app.yaml  pyproject.toml
demo_frontend/: __main__.py
tests/: test_demo_frontend.py
